# gtk-browser

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  bookmarks.db  build.rs
.cargo/: config.toml
.github/workflows/: ci.yaml
resources/: bookmark-window.ui  resources.gresource.xml  style.css
src/: application.rs  cookies.rs  engine.rs  eventloop.rs  fetcher.rs  main.rs  tab.rs  window.rs
src/cookies/: jar.rs  sqlite_store.rs
src/dialog/: about.rs  shortcuts.rs
src/fetcher/: README.md  address_parser.rs  async_stream.rs  ftp.rs  gopher.rs  http.rs
src/fetcher/ftp/: fetcher.rs
src/fetcher/gopher/: fetcher.rs
src/fetcher/http/: agents.rs  fetcher.rs  http.rs  request.rs  response.rs
src/fetcher/http/agents/: reqwest.rs  ureq.rs
src/window/: bookmark.rs  imp.rs  message.rs  tab_context_menu.rs  vello_render.rs  vellowidget.rs
src/window/bookmark/: db.rs  imp.rs
