[package]
name = "gosub-gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk-macros = "0.3"
gtk4 = { version = "0.9.4", features = ["v4_6", "v4_14"] }
chrono = { version = "0.4.31", features = [] }
reqwest = {  version = "0.12.9", features = ["blocking", "gzip", "brotli", "cookies", "deflate", "http2", "rustls-tls"] }
uuid = { version = "1.11.0", features = ["v4", "v7"] }
log = "0.4.22"
once_cell = "1.5"
colog = "1.3.0"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
async-channel = "2.3.1"
url = "2.5.2"
rusqlite = "0.25.0"
cookie = "0.18.1"

[build-dependencies]
glib-build-tools = "0.20.0"
