[package]
name = "gosub-gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk-macros = "0.3"
gtk4 = { version = "0.9.4", features = ["v4_6", "v4_14"] }
chrono = { version = "0.4.31", features = [] }
reqwest = {  version = "0.12.9", features = ["blocking", "gzip", "brotli", "cookies", "deflate", "http2", "rustls-tls"] }
uuid = { version = "1.11.0", features = ["v4"] }
log = "0.4.22"
once_cell = "1.5"
colog = "1.3.0"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
async-channel = "2.3.1"
raw-window-handle = "0.4"
wgpu = "22.1.0"
vello = "0.3.0"
futures = "0.3.31"
ashpd = { version = "0.10.2", features = ["raw_handle", "gtk4_wayland", "gtk4_x11", "raw-window-handle", "gtk4"] }

[build-dependencies]
glib-build-tools = "0.20.0"
