[package]
name = "gosub-gtk"
version = "0.1.0"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
description = "Gosub browser using GTK"
license = "MIT"

[dependencies]
gosub_engine = { version = "0.1.2", registry = "gosub" }
gtk-macros = "0.3"
gtk4 = { version = "0.9.5", features = ["v4_6", "v4_14"] }
chrono = { version = "0.4.39", features = [] }
uuid = { version = "1.11.0", features = ["v4", "v7"] }
log = "0.4.22"
once_cell = "1.5"
colog = "1.3.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
async-channel = "2.3.1"
url = "2.5.2"
rusqlite = "0.32.1"
cookie = "0.18.1"
sourceview5 = { version = "0.9.1", features = ["gtk_v4_6"] }
anyhow = "1.0.95"
# Optional dependencies
reqwest = {  version = "0.12.11", features = ["blocking", "gzip", "brotli", "cookies", "deflate", "http2", "rustls-tls"], optional = true }
ureq = { version = "2.0.0", optional = true }
thiserror = "2.0.9"

[features]
default = ["proto-http", "http-agent-reqwest"]
http-agent = []
http-agent-reqwest = ["http-agent", "dep:reqwest"]
http-agent-ureq = ["http-agent", "dep:ureq"]

proto-http = []     # Enables the HTTP(s) protocol (required)
proto-ftp = []      # Enables the FTP protocol (ftp://)
proto-gopher = []   # Enables the Gopher protocol (gopher://)

[build-dependencies]
glib-build-tools = "0.20.0"

